[package]
name = "anything"
version = "0.1.5"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = "Calculate everything and nothing with perfect precision."
documentation = "https://docs.rs/anything"
readme = "README.md"
homepage = "https://github.com/udoprog/anything"
repository = "https://github.com/udoprog/anything"
license = "MIT/Apache-2.0"
keywords = ["cli", "language", "scripting"]
categories = ["command-line-interface"]

[dependencies]
num = { version = "0.4.0", features = ["serde"] }
anyhow = "1.0.70"
hashbrown = "0.13.2"
serde = { version = "1.0.160", features = ["derive"] }
syntree = "0.14.5"
logos = "0.13.0"
thiserror = "1.0.40"
codespan-reporting = "0.11.1"
tantivy = "0.19.2"
rust-embed = "6.6.1"
directories = "5.0.0"
twox-hash = "1.6.3"
serde_json = "1.0.96"
log = "0.4.17"
serde_cbor = "0.11.2"
pretty_env_logger = "0.4.0"

flate2 = "1.0.25"
structopt = "0.3.26"

[workspace]
members = [
    "tools/*",
]
