[package]
name = "anything"
version = "0.1.5"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.91"
description = "Calculate everything and nothing with perfect precision."
documentation = "https://docs.rs/anything"
readme = "README.md"
homepage = "https://github.com/udoprog/anything"
repository = "https://github.com/udoprog/anything"
license = "MIT OR Apache-2.0"
keywords = ["cli", "language", "scripting"]
categories = ["command-line-interface"]

[dependencies]
num = { version = "0.4.0", features = ["serde"] }
anyhow = "1.0.70"
hashbrown = "0.16.1"
serde = { version = "1.0.160", features = ["derive"] }
syntree = "0.18.0"
logos = "0.15.0"
thiserror = "2.0.17"
codespan-reporting = "0.13.1"
tantivy = "0.25.0"
rust-embed = "8.9.0"
directories = "6.0.0"
twox-hash = { version = "2.1.2", features = ["xxhash3_128"] }
serde_json = "1.0.96"
log = "0.4.17"
serde_cbor = "0.11.2"
pretty_env_logger = "0.5.0"

flate2 = "1.0.25"
structopt = "0.3.26"

[workspace]
members = [
    "tools/*",
]
