[package]
name = "assets"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["arbitrary_precision"] }
toml = "0.9.8"
calamine = "0.32.0"
bytes = "1.4.0"
flate2 = "1.0.25"
serde_cbor = "0.11.2"

anything = { path = "../.." }
